--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # CakePHP specific files #
 ##########################
-# /config/app.php
+/config/app.php
 /config/.env
-# /logs/*
-# /tmp/*
+/logs/*
+/tmp/*
 /vendor/*
 composer.lock
 
