--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "cakephp/cakephp": "3.7.*",
         "cakephp/migrations": "^2.0.0",
         "cakephp/plugin-installer": "^1.0",
+        "codeguy/upload": "^1.3",
         "jzaaa/cake-utils": "^0.0.1",
         "mobiledetect/mobiledetectlib": "2.*"
     },
