--- a/composer.json
+++ b/composer.json
@@ -28,14 +28,16 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/",
-            "Admin\\": "./plugins/Admin/src/"
+            "Admin\\": "./plugins/Admin/src/",
+            "Website\\": "./plugins/Website/src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
             "App\\Test\\": "tests/",
             "Cake\\Test\\": "vendor/cakephp/cakephp/tests/",
-            "Admin\\Test\\": "./plugins/Admin/tests/"
+            "Admin\\Test\\": "./plugins/Admin/tests/",
+            "Website\\Test\\": "./plugins/Website/tests/"
         }
     },
     "scripts": {
